# Sudoku_app

./: .gitignore  .gitlab-ci.yml  Makefile  README.md  eslint.config.ts  flake.nix  package-lock.json  package.json  vite.config.ts
.github/workflows/: ci.yml
docs/: .gitignore  ConOps.md  Makefile  README.md  diagramme1.puml  diagramme2.puml  diagramme3.puml  diagramme4.puml  presentation.tex
src/: App.tsx  SudokuContext.tsx  main.tsx  sudoku.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/data/: sudoku.db  sudoku1.txt
src-tauri/icons/: icon.icns
src-tauri/src/: cli.rs  lib.rs  main.rs
src-tauri/src/lib_modules/: base_donnee.rs  display_terminal.rs  events.rs  hint_system.rs  import_sudoku.rs  jouer_sudoku.rs  menu.rs  mod.rs  mod_sudoku.rs  resolver.rs  sauvegarde_sudoku.rs  sudoku_difficulty.rs  sudoku_generator.rs  validator.rs
src/Components/: ColorSchemeToggle.tsx  Puzzle.tsx  Save.tsx  SudokuCell.tsx  ThreeScene.tsx  WinScreen.tsx
src/Pages/: DifficultyMenu.tsx  ImportPage.tsx  LandingPage.tsx  MainMenu.tsx  PlayChoice.tsx  PlayingPage.tsx  PuzzleList.tsx  SaveList.tsx  index.ts
