[package]
name = "complete_sudoku"
version = "0.0.0"
edition = "2024"
default-run = "complete_sudoku"

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "complete_sudoku_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.9.2"
tokio = "1.48.0"
once_cell = "1.21.3"
rusqlite = { version = "0.31", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde", "clock"] }

[[bin]]
name = "complete_sudoku_cli"
path = "src/cli.rs"
